<resources>
    <string name="app_name">Wynahealth</string>
    <string name="title_home">User Information</string>
    <string name="title_dashboard">My Orders</string>
    <string name="title_notifications">Change Password</string>
    <string name="home_title">Home</string>
    <string name="dashboard_title">Transaction</string>
    <string name="notifications_title">Utilities</string>
    <string name="title_activity_settings">Settings Activity</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remind">Remind Later</string>
    <string name="home">Home</string>

    <string name="onsite">Onsite</string>
    <string name="online">Online</string>
    <string name="other_product">Select Other Product</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <string name="outlet_choosen">Outlet Name</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="add_new_patient">Add new patient</string>
    <string name="data_patient_empty">Data patient empty.</string>
    <string name="data_patient">Data Patient</string>
    <string name="title_activity_order_confirmation">Order Confirmation Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_create_order">Create Order Activity</string>

    <string name="logoutQuestion">Are you sure to logout?</string>

    <string-array name="titles">
        <item>Mr.</item>
        <item>Mrs.</item>
    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="array_city">
        <item>Jakarta</item>
        <item>Bandung</item>
    </string-array>

    <string-array name="outlet_city">
        <item>Please Select</item>
        <item>Hermina Jakarta</item>
        <item>Hermina Bandung</item>
    </string-array>

    <string-array name="hermina_jakarta">
        <item>Jatinegara</item>
        <item>Daan Mogot</item>
    </string-array>

    <string-array name="hermina_bandung">
        <item>Arcamanik</item>
        <item>Pasteur </item>
    </string-array>

    <string-array name="filter">
        <item>All Status</item>
        <item>Payment Success</item>
        <item>Waiting For Payment</item>
        <item>Payment Failed</item>
        <item>Transaction Expired</item>
        <item>Order Canceled</item>
    </string-array>

    <string name="gross_amount">Gross Amount</string>
    <string name="discount_total">Total Discount</string>
    <string name="total_net">Total</string>

    <string name="all_data">All Status</string>
    <string name="pending">Waiting For Payment</string>
    <string name="success">Payment Success</string>
    <string name="failed">Payment Failed</string>
    <string name="expired">Transaction Expired</string>
    <string name="cancel">Order Canceled</string>

    <string name="cod">Onsite Payment</string>
    <string name="online_pay">e-Wallet</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="handphone_number">Handphone No.</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="privacy_policy">I am accept the Privacy and Policy</string>
    <string name="back">back</string>
    <string name="register">register</string>
    <string name="identity_number">KTP/Identity Number</string>
    <string name="family_data">Family Data</string>

    <string name="login">Login</string>
    <string name="not_have_account">Not have an account?</string>
    <string name="register_here">Register</string>
    <string name="registration">Registration</string>

    <string name="add_patient">Add New Family Data</string>
    <string name="edit_patient">Edit Data Family</string>

    <string name="cancel_save">Cancel</string>
    <string name="save">Save</string>
    <string name="choose_patient">Choose Patient</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="company_name">Company Name</string>
    <string name="select_product">Select Product</string>
    <string name="patient">Patient</string>
    <string name="total">Total</string>
    <string name="discount">Discount</string>
    <string name="grand_total">Grand Total</string>

    <string name="choose_payment">Choose Payment Methode</string>

    <string name="back_to">Back To</string>

    <string name="order_date">Order Date</string>
    <string name="order_status">Order Status</string>
    <string name="delete_from_carts">Delete Test from Cart?</string>
    <string name="cancel_order">Cancel Order?</string>

    <string name="label_choose_patient">Choose Patient</string>
    <string name="label_choose_test">Choose Test to Order</string>
    <string name="string_title">Title</string>
    <string name="patient_name">Patient Name</string>
    <string name="app_title">E-Registration</string>

    <string name="choose_patient_first">Please Choose Patient</string>
    <string name="choose_date_first">Please Choose Date</string>
    <string name="outlet_city">Outlet City</string>
    <string name="outlet_address">Outlet Name</string>

    <string name="spinner_status">Search by status payment</string>

    <string name="carts_title">My Carts</string>
    <string name="new_order_title">Create New Order</string>
    <string name="select_product_title">Select test to order</string>
    <string name="no_test">No test selected</string>

    <string name="connection_failed">Connection Failed!</string>
    <string name="connection_try_again">Please check your internet connection.</string>

    <string name="server_failed">Can\'t connect to the server</string>
    <string name="server_try_again">please try again later.</string>
    <string name="user_card">User Card</string>
    <string name="powered_by">Powered By</string>

    <string name="fill_name">Please fill Name</string>
    <string name="fill_email">Please fill Email</string>
    <string name="fill_ktp">Please fill Identity Number/KTP</string>
    <string name="fill_postal">Please fill Postal Code</string>
    <string name="fill_phone">Please fill Phone Number</string>
    <string name="fill_dob">Please fil Day of Birth</string>
    <string name="swipe_me">Swipe Me</string>
</resources>
